@@ -43,23 +43,31 @@ import org.elasticsearch.repositories.RepositoriesService;
 import org.elasticsearch.rest.RestController;
 import org.elasticsearch.rest.RestHandler;
 import org.elasticsearch.script.ScriptService;
+import org.elasticsearch.telemetry.TelemetryProvider;
 import org.elasticsearch.threadpool.ThreadPool;
-import org.elasticsearch.tracing.Tracer;
 import org.elasticsearch.watcher.ResourceWatcherService;
 import org.elasticsearch.xcontent.NamedXContentRegistry;
 import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xcontent.XContentParserConfiguration;
 import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.xpack.core.template.TemplateUtils;
+import org.elasticsearch.xpack.fleet.action.DeleteSecretAction;
 import org.elasticsearch.xpack.fleet.action.GetGlobalCheckpointsAction;
 import org.elasticsearch.xpack.fleet.action.GetGlobalCheckpointsShardAction;
+import org.elasticsearch.xpack.fleet.action.GetSecretAction;
+import org.elasticsearch.xpack.fleet.action.PostSecretAction;
+import org.elasticsearch.xpack.fleet.action.TransportDeleteSecretAction;
+import org.elasticsearch.xpack.fleet.action.TransportGetSecretAction;
+import org.elasticsearch.xpack.fleet.action.TransportPostSecretAction;
+import org.elasticsearch.xpack.fleet.rest.RestDeleteSecretsAction;
 import org.elasticsearch.xpack.fleet.rest.RestFleetMultiSearchAction;
 import org.elasticsearch.xpack.fleet.rest.RestFleetSearchAction;
 import org.elasticsearch.xpack.fleet.rest.RestGetGlobalCheckpointsAction;
+import org.elasticsearch.xpack.fleet.rest.RestGetSecretsAction;
+import org.elasticsearch.xpack.fleet.rest.RestPostSecretsAction;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.EnumSet;
 import java.util.List;
@@ -75,10 +83,21 @@ import static org.elasticsearch.xpack.core.ClientHelper.FLEET_ORIGIN;
  */
 public class Fleet extends Plugin implements SystemIndexPlugin {
 
+    public static final String FLEET_SECRETS_INDEX_NAME = ".fleet-secrets";
+
     private static final int CURRENT_INDEX_VERSION = 7;
     private static final String VERSION_KEY = "version";
     private static final String MAPPING_VERSION_VARIABLE = "fleet.version";
     private static final List<String> ALLOWED_PRODUCTS = List.of("kibana", "fleet");
+    private static final int FLEET_ACTIONS_MAPPINGS_VERSION = 1;
+    private static final int FLEET_AGENTS_MAPPINGS_VERSION = 1;
+    private static final int FLEET_ENROLLMENT_API_KEYS_MAPPINGS_VERSION = 1;
+    private static final int FLEET_SECRETS_MAPPINGS_VERSION = 1;
+    private static final int FLEET_POLICIES_MAPPINGS_VERSION = 1;
+    private static final int FLEET_POLICIES_LEADER_MAPPINGS_VERSION = 1;
+    private static final int FLEET_SERVERS_MAPPINGS_VERSION = 1;
+    private static final int FLEET_ARTIFACTS_MAPPINGS_VERSION = 1;
+    private static final int FLEET_ACTIONS_RESULTS_MAPPINGS_VERSION = 1;
 
     @Override
     public Collection<Object> createComponents(
@@ -93,7 +112,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
         NamedWriteableRegistry namedWriteableRegistry,
         IndexNameExpressionResolver expressionResolver,
         Supplier<RepositoriesService> repositoriesServiceSupplier,
-        Tracer tracer,
+        TelemetryProvider telemetryProvider,
         AllocationService allocationService,
         IndicesService indicesService
     ) {
@@ -139,7 +158,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private static SystemIndexDescriptor fleetActionsSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-actions.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-actions.json", FLEET_ACTIONS_MAPPINGS_VERSION), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -157,7 +176,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private static SystemIndexDescriptor fleetAgentsSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-agents.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-agents.json", FLEET_AGENTS_MAPPINGS_VERSION), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -175,7 +194,10 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private static SystemIndexDescriptor fleetEnrollmentApiKeysSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-enrollment-api-keys.json"), XContentType.JSON);
+        request.source(
+            loadTemplateSource("/fleet-enrollment-api-keys.json", FLEET_ENROLLMENT_API_KEYS_MAPPINGS_VERSION),
+            XContentType.JSON
+        );
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -193,24 +215,23 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private static SystemIndexDescriptor fleetSecretsSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-secrets.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-secrets.json", FLEET_SECRETS_MAPPINGS_VERSION), XContentType.JSON);
         return SystemIndexDescriptor.builder()
-            .setType(Type.EXTERNAL_MANAGED)
-            .setAllowedElasticProductOrigins(ALLOWED_PRODUCTS)
+            .setType(Type.INTERNAL_MANAGED)
             .setOrigin(FLEET_ORIGIN)
             .setVersionMetaKey(VERSION_KEY)
             .setMappings(request.mappings())
             .setSettings(request.settings())
-            .setPrimaryIndex(".fleet-secrets-" + CURRENT_INDEX_VERSION)
-            .setIndexPattern(".fleet-secrets*")
-            .setAliasName(".fleet-secrets")
+            .setPrimaryIndex(FLEET_SECRETS_INDEX_NAME + "-" + CURRENT_INDEX_VERSION)
+            .setIndexPattern(FLEET_SECRETS_INDEX_NAME + "*")
+            .setAliasName(FLEET_SECRETS_INDEX_NAME)
             .setDescription("Secret values managed by Fleet")
             .build();
     }
 
     private static SystemIndexDescriptor fleetPoliciesSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-policies.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-policies.json", FLEET_POLICIES_MAPPINGS_VERSION), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -228,7 +249,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private static SystemIndexDescriptor fleetPoliciesLeaderSystemIndexDescriptor() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-policies-leader.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-policies-leader.json", FLEET_POLICIES_LEADER_MAPPINGS_VERSION), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -246,7 +267,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private static SystemIndexDescriptor fleetServersSystemIndexDescriptors() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-servers.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-servers.json", FLEET_SERVERS_MAPPINGS_VERSION), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -264,7 +285,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
 
     private static SystemIndexDescriptor fleetArtifactsSystemIndexDescriptors() {
         PutIndexTemplateRequest request = new PutIndexTemplateRequest();
-        request.source(loadTemplateSource("/fleet-artifacts.json"), XContentType.JSON);
+        request.source(loadTemplateSource("/fleet-artifacts.json", FLEET_ARTIFACTS_MAPPINGS_VERSION), XContentType.JSON);
 
         return SystemIndexDescriptor.builder()
             .setType(Type.EXTERNAL_MANAGED)
@@ -281,7 +302,7 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
     }
 
     private static SystemDataStreamDescriptor fleetActionsResultsDescriptor() {
-        final String source = loadTemplateSource("/fleet-actions-results.json");
+        final String source = loadTemplateSource("/fleet-actions-results.json", FLEET_ACTIONS_RESULTS_MAPPINGS_VERSION);
         try (XContentParser parser = XContentType.JSON.xContent().createParser(XContentParserConfiguration.EMPTY, source)) {
             ComposableIndexTemplate composableIndexTemplate = ComposableIndexTemplate.parse(parser);
             return new SystemDataStreamDescriptor(
@@ -336,15 +357,23 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
         }
     }
 
-    private static String loadTemplateSource(String resource) {
-        return TemplateUtils.loadTemplate(resource, Version.CURRENT.toString(), MAPPING_VERSION_VARIABLE);
+    private static String loadTemplateSource(String resource, int mappingsVersion) {
+        return TemplateUtils.loadTemplate(
+            resource,
+            Version.CURRENT.toString(),
+            MAPPING_VERSION_VARIABLE,
+            Map.of("fleet.managed.index.version", Integer.toString(mappingsVersion))
+        );
     }
 
     @Override
     public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
-        return Arrays.asList(
-            new ActionHandler<>(GetGlobalCheckpointsAction.INSTANCE, GetGlobalCheckpointsAction.TransportAction.class),
-            new ActionHandler<>(GetGlobalCheckpointsShardAction.INSTANCE, GetGlobalCheckpointsShardAction.TransportAction.class)
+        return List.of(
+            new ActionHandler<>(GetGlobalCheckpointsAction.INSTANCE, GetGlobalCheckpointsAction.LocalAction.class),
+            new ActionHandler<>(GetGlobalCheckpointsShardAction.INSTANCE, GetGlobalCheckpointsShardAction.TransportAction.class),
+            new ActionHandler<>(GetSecretAction.INSTANCE, TransportGetSecretAction.class),
+            new ActionHandler<>(PostSecretAction.INSTANCE, TransportPostSecretAction.class),
+            new ActionHandler<>(DeleteSecretAction.INSTANCE, TransportDeleteSecretAction.class)
         );
     }
 
@@ -358,10 +387,13 @@ public class Fleet extends Plugin implements SystemIndexPlugin {
         IndexNameExpressionResolver indexNameExpressionResolver,
         Supplier<DiscoveryNodes> nodesInCluster
     ) {
-        return Arrays.asList(
+        return List.of(
             new RestGetGlobalCheckpointsAction(),
             new RestFleetSearchAction(restController.getSearchUsageHolder()),
-            new RestFleetMultiSearchAction(settings, restController.getSearchUsageHolder())
+            new RestFleetMultiSearchAction(settings, restController.getSearchUsageHolder()),
+            new RestGetSecretsAction(),
+            new RestPostSecretsAction(),
+            new RestDeleteSecretsAction()
         );
     }
 }
